// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Switch Basic Active Switch 1`] = `
<button
  className="css-ssnb1t-SwitchWrapper egh0tog0"
  onClick={[Function]}
  width="NORMAL"
>
  <div
    className="css-fuaihs-SwitchBall egh0tog1"
  />
</button>
`;

exports[`Storyshots Atoms/Switch Basic Inactive Switch 1`] = `
<button
  className="css-13kjyr7-SwitchWrapper egh0tog0"
  onClick={[Function]}
  width="NORMAL"
>
  <div
    className="css-1lmkk7b-SwitchBall egh0tog1"
  />
</button>
`;
